# substrate

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  docker-compose.test.yml  pyproject.toml  spec.md  spec.yaml
.substrate/: worklog.md
breadcrumbs/: 007-unwired-idempotency-keys.md  008-signing-scheme-jsonb-drift.md  009-jcs-edge-cases.md  016-pagination-moving-target.md  017-test-coverage-load-bearing-acs.md  020-escalation-metric-extra-read.md  021-hook-consumer-no-reconnect.md  022-workflow-re-registration-idempotent-vs-reject.md  026-dead-error-codes.md  042-substrate-dsn-public-api.md  043-read-events-composite-ordering-semantics.md  044-test-suite-imports-drop-project-schema-from-private-module.md  045-in-memory-substrate-ignores-hmac-key-path.md  047-stuck-hook-double-processing.md  048-in-memory-hook-status-tracking.md  049-zero-roles-bypass-check.md  050-in-memory-poll-hooks-handler-not-registered.md  051-in-memory-poll-hooks-nil-uuid-fallback.md  052-in-memory-hook-queue-unbounded-growth.md  060-canonical-diagnostic-payload-shape.md  061-workflow-yaml-validator-helper.md  128-extract-event-store-protocol.md  145-replay-orphan-check.md  174-unknown-key-status-silently-skipped.md  175-sidecar-api-docs-exposed-without-auth.md  176-sidecar-sole-signer-middleware-only-checks-post.md  177-no-actor-id-length-limit.md  179-move-to-dead-letter-append-event-no-atomicity.md  180-plaintext-hmac-secrets-at-rest-in-key-files.md  183-init-and-in-memory-need-further-decomposition.md  184-hook-queue-depth-metric-missing.md  185-maintenance-metrics-not-specified.md  188-connect-missing-search-path-cross-schema-drop.md  189-in-memory-replay-omits-claim-expires-at-and-orphan-detection.md  190-event-partitions-not-auto-ensured-silent-events-default-spill.md  191-migration-runner-no-advisory-lock-no-checksum.md  192-validator-timeout-does-not-cancel-thread.md  193-read-events-partition-pruning-hack-undocumented.md  194-heartbeat-claim-mutates-state-without-event.md  README.md  (+3 more)
debate/: 002-workflow-composition.md  README.md  (+1 more)
(+388 files in other folders)
