[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "substrate"
version = "0.1.0"
description = "Coordination + state plane for agent pipelines over Postgres"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.2,<4",
    "psycopg-pool>=3.2,<4",
    "pyyaml>=6.0",
    "jsonschema>=4.21",
    "structlog>=24.1",
    "prometheus-client>=0.20",
    "rfc8785>=0.1.4",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "hypothesis>=6.100",
]

[tool.hatch.build.targets.wheel]
packages = ["src/substrate"]

[tool.hatch.build.targets.wheel.force-include]
"migrations" = "substrate/migrations"

[project.scripts]
substrate = "substrate._cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: scale benchmarks, skipped by default",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "RUF"]
